--- a/backend/.env-sample
+++ b/backend/.env-sample
@@ -1,6 +1,7 @@
-DB_URL=mongodb+srv://admin:<db_password>@cluster0.soeswwr.mongodb.net/?appName=Cluster0
-REDIS_HOST=host
-REDIS_PORT=port
-REDIS_USERNAME=
-REDIS_PASSWORD=
-STRIPE_SECRET_KEY=
+PORT=4000
+DB_URL=mongodb+srv://... (your_db_url)
+REDIS_URL=redis://... (your_redis_url)
+REDIS_PASSWORD=... (your_redis_password)
+STRIPE_SECRET_KEY=... (your_stripe_key)
+JWT_SECRET=supersecret123
+FRONTEND_URL=http://localhost:5173
