--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "npm install --prefix ../frontend && npm run build --prefix ../frontend && rm -rf dist && cp -r ../frontend/dist ./dist"
   },
   "author": "",
   "license": "ISC",
