--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,11 @@
 services:
-  # Backend Service
+  # Monolithic Service (Backend + Frontend)
   - type: web
-    name: cinebook-backend
+    name: cinebook-app
     env: node
     rootDir: backend
-    buildCommand: npm install
-    startCommand: node server.js
+    buildCommand: npm install && npm run build
+    startCommand: npm start
     envVars:
       - key: DB_URL
         sync: false
@@ -18,23 +18,7 @@ services:
       - key: JWT_SECRET
         sync: false
       - key: FRONTEND_URL
-        sync: false
-    autoDeploy: false
-
-  # Frontend Static Site
-  - type: static
-    name: cinebook-frontend
-    env: static
-    rootDir: frontend
-    buildCommand: npm install && npm run build
-    publishDir: dist
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
-    envVars:
-      - key: VITE_API_BASE_URL
         fromService:
-            type: web
-            name: cinebook-backend
-            envVar: RenderServiceAddress 
+          type: web
+          name: cinebook-app
+          envVar: RenderServiceAddress
