--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
   - type: web
     name: cinebook-app
     env: node
-    rootDir: backend
-    buildCommand: npm install && npm run build
+    # rootDir is removed so it defaults to the repo root
+    buildCommand: npm run build
     startCommand: npm start
     envVars:
       - key: DB_URL
