--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cinebook-movie-ticketing-system",
+  "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
