--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cinebook-movie-ticketing-system-client",
+  "name": "backend-client",
   "private": true,
   "version": "1.0.0",
   "type": "module",
