--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend && rm -rf backend/dist && cp -r frontend/dist backend/dist",
+    "postinstall": "npm run build",
     "start": "cd backend && npm start"
   }
 }
