--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "npm install --prefix ../frontend && npm run build --prefix ../frontend && rm -rf dist && cp -r ../frontend/dist ./dist"
+    "build": "npm install --prefix ../frontend && npm run build --prefix ../frontend && rm -rf dist && cp -r ../frontend/dist ./dist",
+    "postinstall": "npm run build"
   },
   "author": "",
   "license": "ISC",
